--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the hello world app used by the `cordova create` command.",
   "repository": {
     "type": "git",
-    "url": "https://git-wip-us.apache.org/repos/asf/cordova-app-hello-world.git"
+    "url": "https://github.com/apache/cordova-app-hello-world"
   },
   "main": "index.js",
   "keywords": [
